styles.css
/* ... */
#page-mod-quizinvideo-edit ul.slots li.section li.activity .instancetimeofvideocontainer form input {
    margin: 0;
    padding: 0.2em;
    height: 1em;
}

#page-mod-quizinvideo-edit ul.slots li.section li.activity .instancetimeofvideocontainer {
    background: white;
    padding: 0.2em;
    margin: 0.4em;
}



#page-mod-quizinvideo-edit ul.slots li.section li.activity .instancemaxmark {
    display: inline-block;
    text-align: right;
}
#page-mod-quizinvideo-edit.dir-rtl ul.slots li.section li.activity .instancemaxmark {
    text-align: left;
}
#page-mod-quizinvideo-edit ul.slots li.section li.activity .page_split_join_wrapper {
    position: absolute;
}
#page-mod-quizinvideo-edit ul.slots li.section li.activity .page_split_join {
    position: relative;
    left: -20px;
    top: -7px;
}
#page-mod-quizinvideo-edit.dir-rtl ul.slots li.section li.activity .page_split_join {
    left: auto;
    right: -20px;
}

#page-mod-quizinvideo-edit ul.slots li.section li.activity .instancemaxmark.decimalplaces_0 {
    min-width: 1.3em;
}
#page-mod-quizinvideo-edit ul.slots li.section li.activity .instancemaxmark.decimalplaces_1 {
    min-width: 2em;
}
#page-mod-quizinvideo-edit ul.slots li.section li.activity .instancemaxmark.decimalplaces_2 {
    min-width: 2.6em;
}
#page-mod-quizinvideo-edit ul.slots li.section li.activity .instancemaxmark.decimalplaces_3 {
    min-width: 3.2em;
}
#page-mod-quizinvideo-edit ul.slots li.section li.activity .instancemaxmark.decimalplaces_4 {
    min-width: 3.7em;
}
#page-mod-quizinvideo-edit ul.slots li.section li.activity .instancemaxmark.decimalplaces_5 {
    min-width: 4.3em;
}
#page-mod-quizinvideo-edit ul.slots li.section li.activity .instancemaxmark.decimalplaces_6 {
    min-width: 4.8em;
}
#page-mod-quizinvideo-edit ul.slots li.section li.activity .instancemaxmark.decimalplaces_7 {
    min-width: 5.45em;
}

#page-mod-quizinvideo-edit ul.slots li.section li.activity .edit_icon,
#page-mod-quizinvideo-edit ul.slots li.section li.activity a.preview,
#page-mod-quizinvideo-edit ul.slots li.section li.activity .editing_delete,
#page-mod-quizinvideo-edit ul.slots li.section li.activity .editing_maxmark {
    margin: 0 2px;
}

#page-mod-quizinvideo-edit ul.slots li.section li.activity .activityinstance {
    display: block;
    min-height: 1.7em;
    position: absolute;
    top: 0;
    left: 5em;
    width: 100%;
}
#page-mod-quizinvideo-edit.dir-rtl ul.slots li.section li.activity .activityinstance {
    left: auto;
    right: 5em;
}

#page-mod-quizinvideo-edit ul.slots li.section li.activity .mod-indent-outer {
    padding-left: 22px;
}
#page-mod-quizinvideo-edit.dir-rtl ul.slots li.section li.activity .mod-indent-outer {
    padding-left: 0;
    padding-right: 22px;
}

#page-mod-quizinvideo-edit ul.slots .activityinstance form {
    display: inline;
}
#page-mod-quizinvideo-edit span.editinstructions {
    right: 0;
}
#page-mod-quizinvideo-edit span.edittimeinstructions {
    left: 0;
    position: absolute;
    top: 0;
    z-index: 9999;
    padding: .1em .4em;
    margin-top: -22px;
    margin-left: 30px;
    font-size: 11.9px;
    line-height: 16px;
    color: #3a87ad;
    text-decoration: none;
    background-color: #d9edf7;
    border: 1px solid #bce8f1;
}
#page-mod-quizinvideo-edit.dir-rtl span.editinstructions {
    left: 0;
    right: auto;
}

#page-mod-quizinvideo-edit ul.slots .activityinstance span.instancename {
    overflow-x: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
    overflow: hidden;
    word-break: break-word;
    width: 70%;
    display: inline-block;
    height: 20px;
}

#page-mod-quizinvideo-edit ul.slots .activityinstance span.instancename img {
    margin: 0 0.2em;
}
#page-mod-quizinvideo-edit #categoryquestions .questionname,
#page-mod-quizinvideo-edit ul.slots li.activity div.activityinstance .questionname {
  font-weight: bold;
    color: #555;
}
#page-mod-quizinvideo-edit ul.slots li.activity div.activityinstance .questiontext {
    color: #555;
}
#page-mod-quizinvideo-edit ul.slots li.activity div.activityinstance .mod_quizinvideo_random_qbank_link {
    font-size: 0.8em;
}

#page-mod-quizinvideo-edit ul.slots .activityinstance img.activityicon {
    float: left;
    margin: .2em 0 0;
    padding: 0;
}
#page-mod-quizinvideo-edit.dir-rtl ul.slots .activityinstance img.activityicon {
    float: right;
}

#page-mod-quizinvideo-edit .section .activity .actions {
    white-space: nowrap;
    background: #e6e6e6;
    padding: 0.1em 0;
}

#page-mod-quizinvideo-edit .mod_quizinvideo_edit_forms {
    display: none;
}

#categoryquestions > tbody > tr:nth-of-type(even) {
    background: #e4e4e4;
}
#categoryquestions > tbody > tr:nth-of-type(even).highlight {
    background-color: #AAFFAA;
}
#categoryquestions .header {
    text-align: center;
    padding: 0 2px;
    border: 0 none;
}
#categoryquestions th.modifiername .sorters,
#categoryquestions th.creatorname .sorters {
    font-weight: normal;
    font-size: 0.8em;
}
table#categoryquestions {
    width: 100%;
    overflow: hidden;
    table-layout: fixed;
}
#categoryquestions .iconcol {
    width: 15px;
    text-align: center;
    padding: 0;
}
#categoryquestions .checkbox {
    width: 19px;
    text-align: center;
    padding: 0;
}
#categoryquestions .qtype {
    text-align: center;
}
#categoryquestions .qtype {
    width: 28px;
    padding: 0;
}
#categoryquestions .questiontext {
    position: relative;
    zoom: 1;
    padding-left: 0.3em;
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
}
.dir-rtl #categoryquestions .questiontext {
    padding-left: 0;
    padding-right: 0.3em;
}
#categoryquestions .questionname {
    white-space: nowrap;
    overflow: hidden;
    zoom: 1;
    position: relative;
}
#categoryquestions .questiontext p {
    margin: 0;
}

#page-mod-quizinvideo-edit table#categoryquestions td,
#page-mod-quizinvideo-edit table#categoryquestions th {
    overflow: hidden;
    white-space: nowrap;
}
/* ... */

